kubernetes/revolut/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: revolut
  name: revolut-challenge
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:660510932689:certificate/3d585e8f-1f2b-40dd-b705-1c15e580c977
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
  - host: revolut-challenge.marianobilli.link
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: revolut-challenge
            port:
              number: 443
